--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -15,15 +15,17 @@ html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, s
 h1, h2, h3 { font-family: georgia, times; }
 a { color: green; }
 #progressbar { height:50px; }
-#task_description, #task_added_time { outline-width:0px ;width: 480px; padding: 7px; border: 1px solid #008000; font-size:28px; font-family:georgia; }
+#task_description, #task_added_time, input#first, input#second, input#task_duration{ outline-width:0px ;width: 480px; padding: 7px; border: 1px solid #008000; font-size:28px; font-family:georgia; }
+input#first, input#second { margin-bottom:10px; }
 #task_added_time { width:100px; }
 #task_added_time_size { font-family:georgia; font-size:28px; }
 .task_description { padding-right: 50px; }
 /* calendarview */
 #addTaskDiv { display: inline-block; }
 #popupDateField { display: inline; background-color: #cde; cursor: pointer; }
-input[type="submit"][value="+"],input[type="submit"][value="Add time"] { font-size:20px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px;background-color:#abdd58}
-input[type="submit"][value="+"]:hover ,input[type="submit"][value="Add time"]:hover { background:#008000; }
+input[type="submit"][value="+"],input[type="submit"][value="Add time"], input[value="Break it down!"], input#task_submit { font-size:20px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px;background-color:#abdd58}
+input[type="submit"][value="+"]:hover ,input[type="submit"][value="Add time"]:hover, input[value="Break it down!"]:hover { background:#008000; }
+input#task_submit { width:75px; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
 div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; cursor: pointer}
@@ -31,3 +33,4 @@ div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border:
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
 #dateNav a { text-decoration: none; color: #000; font: bold 25pt verdana; }
+#minutes { font-family:georgia; font-size:28px; }
