--- a/app/views/tasks/add_time.html.erb
+++ b/app/views/tasks/add_time.html.erb
@@ -1,3 +1,11 @@
+<script type="text/javascript">
+  jQuery(document).ready(
+  function() {
+    jQuery("input#task_added_time").focus(function() { jQuery(this).css("background","#f9f8e4")});
+    jQuery("input#task_added_time").blur(function() { jQuery(this).css("background","white")});
+    }
+  );
+</script>
 <h1>Add some time!</h1>
 <div id="table_container">
 
