Made rspec stop complaining about certain errors.

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
   var ajax_updater;
   var update_progress;
 
-  var check_time; //<- actually should be named start_time
+  var check_time; // actually should be named start_time
 	var stopSwitch = true;
 	var paused_time_stop;
 	var paused_time_go;
