--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -29,7 +29,7 @@ input#task_submit { width:75px; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
 div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; cursor: pointer}
-#other_tasks { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
+#hide, #show { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
 #dateNav a { text-decoration: none; color: #000; font: bold 25pt verdana; }
