--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -8,6 +8,11 @@
       jQuery("input#first,input#second").focus(function() { jQuery(this).css('background-color','#f9f8e4');});
       jQuery("input#first,input#second").blur(function() { jQuery(this).css('background-color','white'); });
       });
+
+  function checkOff(taskId) {
+  new Ajax.Request('/tasks/finish/' + taskId, { method: 'put' });
+    window.location.replace("http://localhost:3000");
+  }
 </script>
 
 <h1><strong>You didn't complete the task...</strong></h1>
@@ -32,6 +37,9 @@
 </p>
 <p>
   Or you could <%= link_to 'add more time.', add_time_path(@task) %>
+</p>
+<p>
+But wait! You say you finished the task? Check that box! <input type="checkbox" onclick="checkOff(<%= @task.id %>)">
 </p>
 
 <%= link_to 'Back', tasks_path %>
