--- a/app/views/tasks/fail.html.erb
+++ b/app/views/tasks/fail.html.erb
@@ -79,6 +79,7 @@
     <p>Perhaps you could like to split your original task into subtasks?  For instance, <em>clean the bedroom</em> would break down into <em>make the bed</em> and <em>vacuum the floor</em>.</p>
     <% form_tag :action => "add_tasks" do %>
       <%= hidden_field_tag "id", @task.id %>
+      <%= hidden_field_tag(:associated_date, Time.now(), :name => "associated_date", :id => "associatedDateField") %>
       <%= label_tag 'first', 'Subtask 1' %><br />
       <%= text_field_tag "first", nil, :placeholder => "subtask1" %>
       <br />
