--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,12 +1,12 @@
 html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, sans-serif, arial; }
 /* layout divs */
-#wrapper { width: 800px; margin: -1px auto; border: 1px solid #ccc; background-color: #fff; }
+#wrapper { width: 820px; margin: -1px auto; border: 1px solid #ccc; background-color: #fff; }
 #header { padding: 0 10px; border-bottom: 1px solid #ccc; }
 #masthead h1 { font: bold 18pt georgia, times; }
 #userStatus { float: right; margin: -40px 20px 0 0; }
 #content { padding: 10px 20px; }
 #content h1 { margin-top: 0.5em; }
-#footer { padding: 0 10px; border-top: 1px solid #ccc; }
+#footer { clear: both; padding: 0 10px; border-top: 1px solid #ccc; }
 #footer tt { background-color: #ffffcc; }
 /* specific elements */
 #flash_notice, #flash_error { border: 1px solid silver; background-color: #DFF2BF; padding: 0.3em; font: 10pt verdana; line-height: 1.3em; }
@@ -15,7 +15,8 @@ html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, s
 h1, h2, h3 { font-family: georgia, times; }
 a { color: green; }
 #progressbar { height:50px; }
-#task_description, #task_added_time, input#first, input#second, input#third, input#fourth, input#fifth, input#task_duration{ outline-width:0px ;width: 480px; padding: 7px; border: 1px solid #008000; font-size:28px; font-family:georgia; }
+#task_description, #task_added_time, input#first, input#second, input#third, input#fourth, input#fifth, input#task_duration{ outline-width:0px ;width: 480px; padding: 7px; border: 1px solid #008000; font-size:26px; font-family:georgia; -webkit-border-radius: 4px; -moz-border-radius: 4px; }
+input#task_duration { width: 70px; display: inline-block; }
 input#first, input#second, input#third, input#fourth, input#fifth { margin-bottom:10px; }
 #task_added_time { width:100px; }
 #task_added_time_size { font-family:georgia; font-size:28px; }
@@ -28,14 +29,16 @@ input#first, input#second, input#third, input#fourth, input#fifth { margin-botto
 /* calendarview */
 #addTaskDiv { display: inline-block; }
 #popupDateField { display: inline; background-color: #cde; cursor: pointer; }
-input[type="submit"][value="+"],input[type="submit"][value="Add time"], input[value="Break it down!"], input#task_submit { font-size:20px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px;background-color:#abdd58}
+input[type="submit"][value="+"],input[type="submit"][value="Add time"], input[value="Break it down!"], input#task_submit { font-size:25px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px;background-color:#abdd58; padding: 7px; }
 input[type="submit"][value="+"]:hover ,input[type="submit"][value="Add time"]:hover, input[value="Break it down!"]:hover { background:#008000; }
-input#task_submit { width:75px; }
+input[type="submit"][value="+"] { padding: 7px 12px; }
+input#task_submit { width:75px; display: inline-block; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
-div.dateField, #addTaskButton { display: inline-block; padding: 3px 5px; border: 0; -webkit-border-radius: 6px; -moz-border-radius: 6px; color: #555; background-color: #cde; text-align: center; cursor: pointer}
+.ui-datepicker-trigger { margin: 0 -10px; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer}
 #hide, #show { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
-#dateNav a { text-decoration: none; color: #000; font: bold 25pt verdana; }
+#dateNav { display: inline; }
+#dateNav a { margin: 0; text-decoration: none; color: #000; font: bold 23pt verdana; padding: 1px 5px 7px 5px; background-color: #cde; -webkit-border-radius:6px; -moz-border-radius: 6px; z-index: 100; color:#666;}
 #minutes { font-family:georgia; font-size:28px; }
