the styling continues

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -52,7 +52,7 @@
 
   <div id="footer">
 
-    <p><tt>v0.01alpha</tt>. Created by the <a href="/about">ConstantWin team</a>.</p>
+    <!--<p><tt>v0.01alpha</tt>.--> Created by the <a href="/about">ConstantWin team</a>.</p>
 
   </div>
 
