--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -162,15 +162,15 @@
   jQuery(document).ready( 
     function() {
       jQuery(".buttons").hide();
-      jQuery("#task_description,input#first,input#second").focus(function() { jQuery("#task_description").css('background-color','#f9f8e4'); });
-      jQuery("#task_description").blur(function() { jQuery("#task_description").css('background-color', 'white');});
+      //jQuery("#task_description,input#first,input#second").focus(function() { jQuery("#task_description").css('background-color','#'); });
+      //jQuery("#task_description").blur(function() { jQuery("#task_description").css('background-color', 'white');});
       jQuery("#show").live('click',function() { jQuery("#show").html("Hide other tasks").attr("id","hide");jQuery(".taskEntry").delay(1000).show();});
       jQuery("#hide").live('click',function() { jQuery("#hide").html("Show other tasks").attr("id","show");hideTasks();});
       jQuery("#show").hide();
       jQuery(".taskEntry,.buttons").hover( function() { var s = jQuery(this).attr('id');jQuery("[butt="+s+"]").show(); }).mouseleave(function() { var s = jQuery(this).attr('id');jQuery("[butt="+s+"]").hide();}, 100);
       jQuery('#datepicker').datepicker({
         showOn: 'button',
-        buttonText: 'All Tasks',
+        buttonText: 'Select Date',
         dateFormat: 'yymmdd',
         onSelect: function(dateText, inst) { filterByDate(dateText, inst); }
       });
@@ -232,7 +232,7 @@ function displayObject(obj) {
 <% form_tag(:controller => "tasks", :action => "create") do %>
   <%= text_field_tag(:task_description, nil, :size => "30", :name => "task[description]",:placeholder => "Enter a new task!") %>
   <%= hidden_field_tag(:associated_date, Time.now(), :name => "task[associated_date]", :id => "associatedDateField") %>
-  <%= submit_tag("+") %>
+  <!--<%= submit_tag("+") %>-->
 <% end %>
 </div>
 
@@ -241,6 +241,7 @@ function displayObject(obj) {
   <input type="text" style="visibility: hidden; width: 0; height: 0; border: 0;" id="datepicker" />
   <a href="javascript:nextDay()">&rsaquo;</a>
 </div>
+
 
 <div style="display: none" id="progressbar"></div>
 
