--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,13 +1,14 @@
-html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, sans-serif, arial; }
+html, body { margin: 0; padding: 0; background-color: #C0DEED; font: 9pt verdana, sans-serif, arial; }
 /* layout divs */
-#wrapper { width: 820px; margin: -1px auto; border: 1px solid #ccc; background-color: #fff; }
+#wrapper { width: 800px; margin: -1px auto; border: 1px solid #ccc; background-color: #fff; -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.3); -moz-box-shadow: 0 1px 10px rgba(0,0,0,.3); box-shadow: 0 1px 10px rgba(0,0,0,.3);}
 #header { padding: 0 10px; border-bottom: 1px solid #ccc; }
-#masthead h1 { font: bold 18pt georgia, times; }
+#masthead h1 { font: bold 18pt helvetica, 'sans-serif'; }
 #userStatus { float: right; margin: -40px 20px 0 0; }
-#content { padding: 10px 20px; }
+#content { padding: 10px 20px; min-height: 400px; }
 #content h1 { margin-top: 0.5em; }
-#footer { clear: both; padding: 0 10px; border-top: 1px solid #ccc; }
-#footer tt { background-color: #ffffcc; }
+#footer { float: left; padding: 10px 0; border-top: 1px solid #ccc; color: #333; opacity: 0.5; }
+#footer a { }
+#footer tt { background-color: #333; }
 /* specific elements */
 #flash_notice, #flash_error { border: 1px solid silver; background-color: #DFF2BF; padding: 0.3em; font: 10pt verdana; line-height: 1.3em; }
 #flash_error { background-color: pink; }
@@ -15,9 +16,10 @@ html, body { margin: 0; padding: 0; background-color: #eee; font: 9pt verdana, s
 h1, h2, h3 { font-family: georgia, times; }
 a { color: green; }
 #progressbar { height:50px; }
-#task_description, #task_added_time, input#first, input#second, input#third, input#fourth, input#fifth, input#task_duration{ outline-width:0px ;width: 480px; padding: 7px; border: 1px solid #008000; font-size:26px; font-family:georgia; -webkit-border-radius: 4px; -moz-border-radius: 4px; }
+#task_description, #task_added_time, input#first, input#second, input#third, input#fourth, input#fifth, input#task_duration{ width: 480px; padding: 7px; border: 1px solid #97B5D2; font-size:26px; font-family:georgia; background: url('/images/input_bg.png') repeat-x scroll left top #F7FCFF; -moz-border-radius: 4px; -webkit-border-radius: 4px;}
 input#task_duration { width: 70px; display: inline-block; }
 input#first, input#second, input#third, input#fourth, input#fifth { margin-bottom:10px; }
+#task_description:focus {background-color: #F9F8E4;}
 #task_added_time { width:100px; }
 #task_added_time_size { font-family:georgia; font-size:28px; }
 .task_description { padding-right: 50px; }
@@ -32,7 +34,7 @@ input#first, input#second, input#third, input#fourth, input#fifth { margin-botto
 input[type="submit"][value="+"],input[type="submit"][value="Add time"], input[value="Break it down!"], input#task_submit { font-size:25px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px;background-color:#abdd58; padding: 7px; }
 input[type="submit"][value="+"]:hover ,input[type="submit"][value="Add time"]:hover, input[value="Break it down!"]:hover { background:#008000; }
 input[type="submit"][value="+"] { padding: 7px 12px; }
-input#task_submit { width:75px; display: inline-block; }
+input#task_submit { display: inline-block; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
 .ui-datepicker-trigger { margin: 0 -10px; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer}
