--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,12 +1,13 @@
-html, body { margin: 0; padding: 0; background-color: #C0DEED; font: 9pt verdana, sans-serif, arial; }
+html, body { margin: 0; padding: 0; background-color: #C0DEED; font: 9pt verdana, sans-serif, arial; color: #333; }
 /* layout divs */
-#wrapper { width: 800px; margin: -1px auto; border: 1px solid #ccc; background-color: #fff; -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.3); -moz-box-shadow: 0 1px 10px rgba(0,0,0,.3); box-shadow: 0 1px 10px rgba(0,0,0,.3);}
-#header { padding: 0 10px; border-bottom: 1px solid #ccc; }
-#masthead h1 { font: bold 18pt helvetica, 'sans-serif'; }
-#userStatus { float: right; margin: -40px 20px 0 0; }
+#wrapper { width: 745px; margin: -1px auto; background-color: #fff; -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.3); -moz-box-shadow: 0 1px 10px rgba(0,0,0,.3); box-shadow: 0 1px 10px rgba(0,0,0,.3);}
+#header { padding: 1px 20px 1px 20px; background-color: #38526b; color: #eee;}
+#header a { color: #DEEBF7; }
+#masthead h1, #masthead a { font: bold 18pt verdana, 'sans-serif'; text-decoration: none; }
+#userStatus { float: right; margin: -40px 5px 0 0; }
 #content { padding: 10px 20px; min-height: 400px; }
-#content h1 { margin-top: 0.5em; }
-#footer { float: left; padding: 10px 0; border-top: 1px solid #ccc; color: #333; opacity: 0.5; }
+#content h1 { margin-top: 0.5em; font: bold 16pt helvetica, 'sans-serif' }
+#footer { float: left; padding: 10px 0; color: #333; opacity: 0.5; }
 #footer a { }
 #footer tt { background-color: #333; }
 /* specific elements */
@@ -14,7 +15,8 @@ html, body { margin: 0; padding: 0; background-color: #C0DEED; font: 9pt verdana
 #flash_error { background-color: pink; }
 /* html elements */
 h1, h2, h3 { font-family: georgia, times; }
-a { color: green; }
+a { color: #38526B; }
+label { font: bold 12pt helvetica, 'sans-serif'; color: #49637C;}
 #progressbar { height:50px; }
 #task_description, #task_added_time, input#first, input#second, input#third, input#fourth, input#fifth, input#task_duration{ width: 480px; padding: 7px; border: 1px solid #97B5D2; font-size:26px; font-family:georgia; background: url('/images/input_bg.png') repeat-x scroll left top #F7FCFF; -moz-border-radius: 4px; -webkit-border-radius: 4px;}
 input#task_duration { width: 70px; display: inline-block; }
@@ -23,24 +25,23 @@ input#first, input#second, input#third, input#fourth, input#fifth { margin-botto
 #task_added_time { width:100px; }
 #task_added_time_size { font-family:georgia; font-size:28px; }
 .task_description { padding-right: 50px; }
-.breakdownOptions { padding:0 20px; text-decoration:none; font-size:20px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px; }
+.breakdownOptions { padding: 7px 20px; text-decoration:none; font-size:25px; -webkit-border-radius:6px; -moz-border-radius:6px; }
 #breakdownAdd { background-color: #D8FF95; }
 #breakdownAdd:hover { background-color: #AFFF56 } 
 #breakdownDel { background-color: #FF9C95; }
 #breakdownDel:hover { background-color: #FF6156 }
 /* calendarview */
 #addTaskDiv { display: inline-block; }
-#popupDateField { display: inline; background-color: #cde; cursor: pointer; }
 input[type="submit"][value="+"],input[type="submit"][value="Add time"], input[value="Break it down!"], input#task_submit { font-size:25px; -webkit-border-radius:6px; -moz-border-radius:6px; border:solid; border-width:0px;background-color:#abdd58; padding: 7px; }
 input[type="submit"][value="+"]:hover ,input[type="submit"][value="Add time"]:hover, input[value="Break it down!"]:hover { background:#008000; }
 input[type="submit"][value="+"] { padding: 7px 12px; }
 input#task_submit { display: inline-block; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
-.ui-datepicker-trigger { margin: 0 -10px; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer}
+.ui-datepicker-trigger { margin: 0 -10px; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer; }
 #hide, #show { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
 #dateNav { display: inline; }
-#dateNav a { margin: 0; text-decoration: none; color: #000; font: bold 23pt verdana; padding: 1px 5px 7px 5px; background-color: #cde; -webkit-border-radius:6px; -moz-border-radius: 6px; z-index: 100; color:#666;}
+#dateNav a { margin: 0; text-decoration: none; color: #000; font-size: 30px; font-weight: bold; padding: 1px 5px 7px 5px; background-color: #cde; -webkit-border-radius:4px; -moz-border-radius: 4px; z-index: 100; color:#666;}
 #minutes { font-family:georgia; font-size:28px; }
