--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,6 +1,6 @@
 html, body { margin: 0; padding: 0; background-color: #C0DEED; font: 9pt verdana, sans-serif, arial; color: #333; }
 /* layout divs */
-#wrapper { width: 750px; margin: -1px auto; background-color: #fff; -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.3); -moz-box-shadow: 0 1px 10px rgba(0,0,0,.3); box-shadow: 0 1px 10px rgba(0,0,0,.3);}
+#wrapper { width: 760px; margin: -1px auto; background-color: #fff; -webkit-box-shadow: 0 1px 10px rgba(0,0,0,.3); -moz-box-shadow: 0 1px 10px rgba(0,0,0,.3); box-shadow: 0 1px 10px rgba(0,0,0,.3);}
 #header { padding: 1px 20px 1px 20px; background-color: #38526b; color: #eee;}
 #header a { color: #DEEBF7; }
 #masthead h1, #masthead a { font: bold 18pt verdana, 'sans-serif'; text-decoration: none; }
@@ -38,10 +38,10 @@ input[type="submit"][value="+"] { padding: 7px 12px; }
 input#task_submit { display: inline-block; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
-.ui-datepicker-trigger { margin: 0 -10px; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer; }
-#hide, #show { text-align:center; -moz-border-radius:6px; -webkit-border-radius:6px; background:#ccddee; color:#555555; width:120px;padding:4px; }
+.ui-datepicker-trigger { margin: 0; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer; }
+#hide, #show { text-align:center; background:#ccddee; color:#555555; width:120px;padding:4px; }
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
-#dateNav { display: inline; }
-#dateNav a { margin: 0; text-decoration: none; color: #000; font-size: 30px; font-weight: bold; padding: 1px 5px 7px 5px; background-color: #cde; -webkit-border-radius:4px; -moz-border-radius: 4px; z-index: 100; color:#666;}
+#dateNav { display: inline-block; -moz-border-radius:6px; -webkit-border-radius:6px; background-color: #cde; font-family: verdana; }
+#dateNav a { margin: 0; text-decoration: none; color: #000; font-size: 30px; font-weight: bold; padding: 1px 5px 7px 5px; color:#666;}
 #minutes { font-family:georgia; font-size:28px; }
