fixed alignment of select date finally

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -237,7 +237,7 @@ function displayObject(obj) {
 </div>
 
 <div id="dateNav">
-  <a href="javascript:previousDay()">&lsaquo;</a><input type="text" style="visibility: hidden; width: 0; height: 0; border: 0;" id="datepicker" /><a href="javascript:nextDay()">&rsaquo;</a>
+  <a href="javascript:previousDay()">&lsaquo;</a><input type="hidden" id="datepicker" /><a href="javascript:nextDay()">&rsaquo;</a>
 </div>
 
 
