--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -174,6 +174,32 @@
         dateFormat: 'yymmdd',
         onSelect: function(dateText, inst) { filterByDate(dateText, inst); }
       });
+      /* add task onenter */
+      jQuery('#addTaskDiv form').first().submit(function() {
+        if (jQuery('#task_description').val().length < 5) {
+          alert('Task Description must be at least 5 characters long!');
+          return false;
+        }
+        jQuery.ajax({
+          url: '/tasks/create/',
+          type: 'POST',
+          data: {'task[description]': jQuery('#task_description').val(), 'task[associated_date]': jQuery('#associatedDateField').val()},
+          success: function () {
+            jQuery.ajax({
+              url: '/tasks/task_list_partial/',
+              type: 'POST',
+              success: function(responseText) { jQuery('#taskListContainer').html(responseText) }
+            });
+            if(jQuery('#pageHeading').text().indexOf('All') != -1);
+            else {
+              var dp = jQuery('#datepicker');
+              filterByDate(jQuery.datepicker.formatDate('yymmdd', dp.datepicker('getDate')));
+            }
+          },
+          failure: function() { alert('failed'); return false; }
+        });
+        return false;
+      });
       
     });
 
