--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -38,7 +38,7 @@ input[type="submit"][value="+"] { padding: 7px 12px; }
 input#task_submit { display: inline-block; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
-#hide, #show { text-align:center; background:#ccddee; color:#555555; width:120px;padding:4px; }
+#hide, #show { text-align:center; background:#ccddee; color:#555555; width:120px;padding:4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; }
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
 #dateNav { display: inline-block; -moz-border-radius:6px; -webkit-border-radius:6px; background-color: #cde; font-family: georgia; padding: 0; }
