some css styling, modified stop_timer so progressbar hidden away and page reloaded

--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -38,7 +38,7 @@
       <td>
         &nbsp;
         <% if task.started_at.nil?%>
-          <%= link_to 'Start', {:action => "start", :task_id => task.id} %>
+          <%= link_to 'Start', {:action => "start", :task_id => task.id}, :class => 'buttons' %>
         <% elsif task.is_finished? %>
 
         <% else %>
