minor formatting changes; will start ironing out bugs now

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -263,7 +263,7 @@ function displayObject(obj) {
 
 <div id="table_container">
 
-  <p id="noTasks" style="display: hidden"></p>
+  <p id="noTasks" style="display:none;"></p>
 
   <div id="taskListContainer"><%= render :partial => "task_list" %></div>
 
