--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -14,6 +14,10 @@
 
   <% @tasks.each do |task| %>
 
+    <% if not task.paused_at.nil? %>
+    <script type="text/javascript">stopSwitch=false;</script>
+    <% end %>
+
     <tr id="taskEntry<%= task.id %>" class="taskEntry">
 
       <td><input id="checkbox<%= task.id %>" type="checkbox" onclick="checkOff(<%=task.id%>)" 
@@ -57,7 +61,11 @@
 
       <!-- Onclick goes to stopTask javascript function...  need to make it call "pause" task controller method -->
       <td class="buttons" id="stopTask<%= task.id %>" butt="taskEntry<%= task.id %>"> 
+        <% if task.paused_at.nil? %>
         <%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to_function(image_tag("circle-red-16.png", :border=>0), "stopTask(#{task.id})", :id => "imgStopTask#{task.id}") %>
+        <% else %>
+          <%= (task.started_at.nil? or task.is_finished?) ? '&nbsp;' : link_to_function(image_tag("circle-green-16.png", :border=>0), "stopTask(#{task.id})", :id => "imgStopTask#{task.id}") %>
+        <% end %>
       </td>
 
       <noscript><td><%= link_to 'Edit', edit_task_path(task) %></td></noscript>
