--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,53 +1,87 @@
-div#loginPageDescription
-{
-float: left;
+div#loginPageDescription {
+	float: left;
+	position: relative;
+	top: 20px;
+	right: -20px;
 }
 
-input
-{
-color: #781351;
-background: #fee3ad;
-border: 1px solid #F3F85C;
-
-/* mozilla browser */
--moz-border-radius: 5px;
-/* opera browser */
-border-radius: 5px;
-/* chrome & safari browser */
--webkit-border-radius: 5px;
+div#loginPageDescription h2 {
+	position: relative;
+	top: 20px;
 }
 
-div#content{float:left;background-color: #fff;border: 1px solid #ccc; width: 760px; height: 500px;margin: -1px auto;position: relative;left: -1px;}
-div#rightColumn{float:left;}
+input {
+	width: 300px; 
+	padding: 7px;
+	margin: 6px; 
+	border: 1px solid #97B5D2; 
+	font-size:16px; 
+	font-family:georgia; 
+	background: url('/images/input_bg.png') repeat-x scroll left top #F7FCFF; 
+	-moz-border-radius: 12px; 
+	-webkit-border-radius: 12px;
+}
+
+div#content {
+	float:left;
+	background-color: #fff;
+	border: 1px solid #ccc; 
+	width: 720px; 
+	height: 500px;
+	margin: -1px auto;
+	position: relative;
+	left: -1px;
+}
+
+div#rightColumn {
+	float:left;
+	position: relative;
+	top: 24px;
+}
+
 div#login{}
 
-div#register
-{
+div#register {
 	margin:10px 0px 0px 0px;
 	top:10px;	
 }
 
-fieldset
-{
-	
-color: #BF4314;
-background-color: #DFA031;
-position: relative;
-right: -100px;
-border: 1px solid #F3F85C;
-width: 20em;
-padding: 10px;
+fieldset {
+ 	border: 0; color: #555; background-color: #cde; cursor: pointer;
+	/*color: #BF4314;
+	background-color: #DFA031;*/
+	position: relative;
+	right: -100px;
+	/*
+	border: 1px solid #F3F85C;
+	width: 20em;
+	padding: 10px;
+	*/
 
-/* mozilla browser */
--moz-border-radius: 10px;
-/* opera browser */
-border-radius: 10px;
-/* chrome & safari browser */
--webkit-border-radius: 10px;
+	/* mozilla browser */
+	-moz-border-radius: 10px;
+	/* opera browser */
+	border-radius: 10px;
+	/* chrome & safari browser */
+	-webkit-border-radius: 10px;
 }
 
-div#login form input {padding: 5px;}
-div#login form input .button {-moz-border-radius: 5px}
+div#login form input {
+	padding: 5px; 
+}
 
+div#login form input .button {
+	-moz-border-radius: 5px;
+}
+
+#loginbutton {
+	width: 120px;
+}
+
+input[type=submit] {
+	width: 120px;
+	float: right;
+	-moz-border-radius: 16px; 
+}
 
 
