the annoying progress bar bug is now 0wNed

--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -15,7 +15,7 @@
   <% @tasks.each do |task| %>
 
     <% if not task.paused_at.nil? %>
-    <script type="text/javascript">stopSwitch=false;</script>
+    <script type="text/javascript">stopSwitch=true;</script>
     <% end %>
 
     <tr id="taskEntry<%= task.id %>" class="taskEntry">
